# duckdb_html_query

./: .gitignore  .gitmodules  Cargo.toml  ENCODING-ISSUES.md  JAVASCRIPT-JSON-DUCKDB.md  Makefile  README.md  build-lambda.sh  devenv.nix  lambda.tf  test_extension.sql
.github/workflows/: MainDistributionPipeline.yml  ci.yml  release.yml
duckdb-extension/: Cargo.toml  Makefile  README.md  test_extension.sql  test_js_decode.sql
duckdb-extension/src/: lib.rs
duckdb-extension/test/sql/: hq.test
src/: duckdb.rs  js_decode.rs  lambda.rs  lib.rs  main.rs  pretty_print.rs
test/sql/: html_query.test
tests/: cli.rs
