[package]
name = "hq"
description = "HTML query - CSS selectors for HTML, like jq for JSON. DuckDB extension included."
categories = ["command-line-utilities", "database"]
keywords = ["CSS", "HTML", "query", "duckdb"]
repository = "https://github.com/midwork-finds-jobs/duckdb_html_query"
readme = "README.md"
license = "MIT"
version = "0.5.0"
authors = ["Michael Maclean <michael@mgdm.net>", "MultisampledNight"]
edition = "2021"

[lib]
name = "html_query"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "hq"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = true
strip = true

[dependencies]
kuchikiki = "0.8"
html5ever = "0.26.0"
url = "2.2.2"
serde_json = "1"
htmlescape = "0.3"
lazy_static = "1.4.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }

# DuckDB extension dependencies
duckdb = { version = "1.4.2", features = ["vtab-loadable", "vscalar"], optional = true }
duckdb-loadable-macros = { version = "0.1.12", optional = true }
libduckdb-sys = { version = "1.4.2", features = ["loadable-extension"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]
duckdb = ["dep:duckdb", "duckdb-loadable-macros", "libduckdb-sys"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
