[package]
name = "html_query"
description = "DuckDB extension for querying HTML using CSS selectors"
categories = ["database"]
keywords = ["CSS", "HTML", "query", "duckdb"]
repository = "https://github.com/midwork-finds-jobs/duckdb_html_query"
readme = "README.md"
license = "MIT"
version = "0.6.0"
edition = "2021"

[lib]
name = "html_query"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true
strip = true

[dependencies]
kuchikiki = "0.8"
html5ever = "0.26.0"
url = "2.2.2"
serde_json = "1"
htmlescape = "0.3"
lazy_static = "1.4.0"

# DuckDB extension dependencies
duckdb = { version = "1.4.2", features = ["vtab-loadable", "vscalar"], optional = true }
duckdb-loadable-macros = { version = "0.1.12", optional = true }
libduckdb-sys = { version = "1.4.2", features = ["loadable-extension"], optional = true }

[features]
default = []
duckdb = ["dep:duckdb", "duckdb-loadable-macros", "libduckdb-sys"]
